# nastro

./: LICENSE  README.md
.github/workflows/: ci-multi-platform.yml  cmake-multi-platform.yml  make-release.yml
src/: CMakeLists.txt  CMakePresets.json
src/nastroui/: CMakeLists.txt  nastroui_licenses.txt
src/nastroui/res/: resources.qrc
src/nastroui/src/: Driver.cpp  Settings.h
src/nastroui/src/ColorMaps/: colormap.h
src/nastroui/src/Data/: Data.h  DataUtil.cpp  DataUtil.h  ImageData.cpp  ImageData.h
src/nastroui/src/Image/: ImageCommon.h  ImageView.cpp  ImageView.h
src/nastroui/src/UI/: AxisSliderWidget.cpp  AxisSliderWidget.h  AxisSpinWidget.cpp  AxisSpinWidget.h  AxisWidget.h  FilesModel.cpp  FilesModel.h  FilesWidget.cpp  FilesWidget.h  HeadersWidget.cpp  HeadersWidget.h  HistogramWidget.cpp  HistogramWidget.h  ImageControlsToolbar.cpp  ImageControlsToolbar.h  ImageRenderToolbar.cpp  ImageRenderToolbar.h  ImageViewWidget.cpp  ImageViewWidget.h  ImageWidget.cpp  ImageWidget.h  MainWindow.cpp  MainWindow.h  MdiHDUWidget.cpp  MdiHDUWidget.h  MdiWidget.cpp  MdiWidget.h  NastroDockWidget.h  PixelDetailsWidget.cpp  PixelDetailsWidget.h  ProducedWidgetAction.cpp  ProducedWidgetAction.h  SettingsDialog.cpp  SettingsDialog.h  SettingsRenderingWidget.cpp  SettingsRenderingWidget.h  WCSWidget.cpp  WCSWidget.h
src/nastroui/src/Util/: Common.cpp  Common.h  ImportFilesWorker.cpp  ImportFilesWorker.h  LoadHDUDataWorker.cpp  LoadHDUDataWorker.h  ProgressDialogWork.cpp  ProgressDialogWork.h  Worker.cpp  Worker.h
src/nastroui/src/VM/: MainWindowVM.cpp  MainWindowVM.h  VMUtil.h
src/nfits/: CMakeLists.txt  Config.cmake.in
src/nfits/include/NFITS/: Bytes.h  Def.h  DiskFITSByteSource.h  Error.h  FITSBlockSource.h  FITSFile.h  HDU.h  Header.h  HeaderBlock.h  IFITSByteSource.h  KeywordCommon.h  KeywordName.h  KeywordRecord.h  MemoryFITSByteSource.h  Result.h  SharedLib.h
src/nfits/include/NFITS/Data/: BinTableData.h  BinTableImageData.h  Data.h  DataUtil.h  ImageData.h
src/nfits/include/NFITS/Image/: FlattenedImageSliceSource.h  ImageCommon.h  ImageRender.h  ImageSlice.h  ImageSliceSource.h  ImageView.h  PhysicalStats.h
src/nfits/include/NFITS/Util/: ImageUtil.h  Transfer.h
src/nfits/include/NFITS/WCS/: WCS.h  WCSParams.h
src/nfits/src/: DiskFITSByteSource.cpp  FITSBlockSource.cpp  FITSBlockSource.h  FITSFile.cpp  HDU.cpp  Header.cpp  InternalDef.h  KeywordRecord.cpp  MemoryFITSByteSource.cpp  Parsing.cpp  Parsing.h  Validation.cpp  Validation.h
src/nfits/src/Codec/: Rice.cpp  Rice.h
src/nfits/src/ColorMaps/: cet_lut.h  colorspace.h
src/nfits/src/Data/: BinTableData.cpp  BinTableImageData.cpp  DataUtil.cpp  ImageData.cpp
src/nfits/src/Image/: FlattenedImageSliceSource.cpp  ImagePipeline.cpp  ImagePipeline.h  ImageRender.cpp  ImageSlice.cpp  ImageView.cpp  PhysicalStats.cpp
src/nfits/src/Util/: Compare.h  Endianness.h  ImageUtil.cpp  ImageUtilInternal.cpp  ImageUtilInternal.h  Transfer.cpp
src/nfits/src/WCS/: WCS.cpp  WCSInternal.cpp  WCSInternal.h
src/nfits/tests/: ImageSliceTests.cpp  ParseBinTableTFORMN.cpp  ParseKeywordName.cpp  ParseKeywordValueAsInteger.cpp  ParseKeywordValueAsLogical.cpp  ParseKeywordValueAsReal.cpp  ParseKeywordValueAsString.cpp  ParseValueIndicator.cpp  ParseWCSKeywordName.cpp
